[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["macros", "multipart"]}
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
chrono = { version = "0.4.43", features = ["serde"] } 
sqlx = { version = "0.8.6", features = ["runtime-tokio", "runtime-tokio-native-tls", "postgres", "uuid", "macros", "chrono"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
argon2 = { version = "0.5.3", features = ["password-hash"] }
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
rand = "0.9.2"
thiserror = "2.0.18"
dotenvy = "0.15"
dotenv = "0.15.0"
once_cell = "1.21.3"
regex = "1.11.1"
async-trait = "0.1.88"
base64 = "0.22.1"
sha1 = "0.10.6"
tower-cookies = "0.11.0"